--- a/libnet/examples/CMakeLists.txt
+++ b/libnet/examples/CMakeLists.txt
@@ -20,3 +20,15 @@ add_libnet_executable(test_runinother test05_00callinother.cpp)
 
 
 add_libnet_executable(test_loopinthread test06_eventloopthread.cpp)
+
+
+add_libnet_executable(test_acceptor test07_acceptor.cpp)
+
+add_libnet_executable(test_onmessage test08_handlemessage.cpp)
+
+
+add_libnet_executable(test_echo  test09_echoserver.cpp)
+
+add_libnet_executable(test_send  test10_send.cpp)
+
+add_libnet_executable(test_wccb  test11_wccb.cpp)
